data/derived/comb/progs/unify/prog1475.ml.out
Characters 28-60:
  let stringOfList f l = "["::(sepConcat ";" (List.map (f) l));;
                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type string but an expression was expected of type
         string list
